--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.6.1
   firebase_storage: ^11.2.1
   cloud_firestore: ^4.7.1
+  permission_handler: ^10.2.0
+  file_picker: ^5.3.0
 
 dev_dependencies:
   flutter_test:
